legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr34964.c-4.8.2-2.out.txt
pr34964.c:5:1: error: invalid initializer
 char x[] = 0;  
 ^
